[Study] Add 문제유형.md

--- a/Study/문제유형.md
+++ b/Study/문제유형.md
@@ -9,6 +9,54 @@
   * 최소 이동 횟수 제한
 * BFS는 최단 경로를 찾을 때 유리하며, 모든 노드를 균등하게 탐색해야 하는 문제에 적합
 
+```c
+#include <stdio.h>
+#include <stdbool.h>
+#include <stdlib.h>
+
+#define MAX 100
+
+int queue[MAX];
+int front = 0, rear = 0;
+bool visited[MAX] = {false}; // 방문 여부
+
+void enqueue(int x) {
+  queue[rear++] = x;
+}
+
+int dequeue() {
+  return queue[front++];
+}
+
+bool is_empty() {
+  return front == rear;
+}
+
+void bfs(int graph[][MAX], int start, int nodes) {
+  enqueue(start);
+  visited[start] = true;
+
+  while (!is_empty()) {
+    int current = dequeue();
+    printf("Visited %d\n", current);
+
+    for (int i = 0; i < nodes; i++) {
+      if (graph[current][i] && !visited[i]) {
+        enqueue(i);
+        visited[i] = true;
+      }
+    }
+  }
+}
+
+int main() {
+  int graph[MAX][MAX] = { /* 인접 행렬로 그래프 입력 */ };
+  int nodes = 5; // 예시로 노드 개수 설정
+  bfs(graph, 0, nodes); // 0번 노드부터 BFS 시작
+  return 0;
+}
+```
+
 ***
 
 ### 2. DFS(깊이우선탐색)
@@ -22,6 +70,33 @@
   * Topological Sorintg (위상 정렬)
   * 경로 탐색 (특정 문자열을 만들 수 있는 경로 탐색)
 * DFS는 모든 경로를 탐색하거나, 깊이 있는 경로를 먼저 탐색해야 할 때 유리, 재귀문제
+
+```c
+#include <stdio.h>
+#include <stdbool.h>
+
+#define MAX 100
+
+bool visited[MAX] = {false};
+
+void dfs(int graph[][MAX], int node, int nodes) {
+  visited[node] = true;
+  printf("Visited %d\n", node);
+
+  for (int i = 0; i < nodes; i++) {
+    if (graph[node][i] && !visited[i]) {
+      dfs(graph, i, nodes); // 재귀적으로 DFS 탐색
+    }
+  }
+}
+
+int main() {
+  int graph[MAX][MAX] = { /* 인접 행렬로 그래프 입력 */ };
+  int nodes = 5; // 예시로 노드 개수 설정
+  dfs(graph, 0, nodes); // 0번 노드부터 DFS 시작
+  return 0;
+}
+```
 
 ***
 
@@ -57,4 +132,112 @@
 | 모든 경로의 가중치가 동일할 때 최적 | 경로의 가중치가 달라지는 경우 적합 |
 | **예시**: 미로 탐색, 말이동 문제 | **예시**: 다익스트라 알고리즘, 배낭 문제, 피보나치 수열 |
 
+```c
+#include <stdio.h>
+
+#define MAX 100
+
+int dp[MAX];
+
+int fibonacci(int n) {
+  dp[0] = 0;
+  dp[1] = 1;
+  for (int i = 2; i <= n; i++) {
+    dp[i] = dp[i - 1] + dp[i - 2]; // 피보나치 수 DP로 계산
+  }
+  return dp[n];
+}
+
+int main() {
+  int n = 10; // 예시로 10번째 피보나치 수 계산
+  printf("Fibonacci(%d) = %d\n", n, fibonacci(n));
+  return 0;
+}
+```
+
 ***
+
+### 4. Greedy(그리디)
+
+* 가장 최선의 선택을 하면서 문제를 해결
+* 대표 *문제유형* 으로는
+  * 동전 거스름돈 문제
+  * 활동 선택 문제
+  * 회의실 배정 문제
+  * 최소 신장 트기 (MST)
+  * 최소 비용 문제
+
+```c
+#include <stdio.h>
+#include <stdlib.h>
+
+int compare(const void* a, const void* b) {
+  return *(int*)b - *(int*)a; // 내림차순 정렬을 위한 비교 함수
+}
+
+int main() {
+  int coins[] = {500, 100, 50, 10}; // 동전 단위
+  int n = 4; // 동전의 개수
+  int amount = 870; // 만들고자 하는 금액
+  int count = 0;
+
+  qsort(coins, n, sizeof(int), compare); // 내림차순 정렬
+
+  for (int i = 0; i < n; i++) {
+    count += amount / coins[i]; // 큰 단위의 동전을 최대한 사용
+    amount %= coins[i];
+  }
+
+  printf("최소 동전 개수: %d\n", count);
+  return 0;
+}
+```
+
+***
+
+### 5. Binary Search(이분 탐색)
+
+* 이분 탐색은 정렬된 배열에서 원하는 값을 찾는 알고리즘, 탐색 범위를 절반으로 줄여가면서 빠르게 값을 찾는 방식
+* 시간 복잡도는 **O(log N)**로 매우 효율적
+* 주로 정렬된 배열 또는 범위가 제한된 문제에서 사용
+* 자료구조는 배열이나 리스트를 사용하며, 중간값을 기준으로 탐색
+* 대표 *문제유형* 으로는
+  * 특정 값 찾기 (정렬된 배열에서 특정 값이 존재하는지 탐색)
+  * Lower Bound / Upper Bound 찾기 (특정 값 이상의 첫 위치나 특정 값보다 큰 첫 위치를 찾는 문제)
+  * 파라메트릭 서치 (최적화 문제를 결정 문제로 바꾸어 이분 탐색을 적용, 예를 들어 랜선 자르기 문제)
+  * 배낭 문제에서의 최대 가치 또는 최적 용량 찾기
+
+```c
+#include <stdio.h>
+
+int binary_search(int arr[], int size, int target) {
+  int left = 0;
+  int right = size - 1;
+
+  while (left <= right) {
+    int mid = left + (right - left) / 2;
+    if (arr[mid] == target) {
+      return mid; // 찾은 경우 해당 인덱스 반환
+    } else if (arr[mid] < target) {
+      left = mid + 1;
+    } else {
+      right = mid - 1;
+    }
+  }
+
+  return -1; // 찾지 못한 경우 -1 반환
+}
+
+int main() {
+  int arr[] = {1, 3, 5, 7, 9};
+  int size = sizeof(arr) / sizeof(arr[0]);
+  int target = 5;
+  int result = binary_search(arr, size, target);
+  if (result != -1) {
+    printf("Found at index: %d\n", result);
+  } else {
+    printf("Not found\n");
+  }
+  return 0;
+}
+```
