--- a/Study/문제유형.md
+++ b/Study/문제유형.md
@@ -241,3 +241,82 @@ int main() {
   return 0;
 }
 ```
+
+***
+
+### 6. Two Pointer(투포인터)
+* 정렬된 배열이나 리스트에서 두 개의 포인터를 이용하여 배열을 탐색하는 방식
+* 두 포인터를 좌우 양 끝에서 출발시키거나 한 곳에서 출발시켜 특정 조건을 만족하는 값을 찾아나가는 방식으로 동작
+* 시간 복잡도는 보통 O(N) 또는 O(N log N) 정도로 효율적
+* 대표 *문제유형* 으로는
+  * 부분합 문제 (연속된 부분합이 주어진 값을 만족하는 최소 길이 찾기)
+  * 두 수의 합 (배열 내에서 두 수의 합이 주어진 목표값과 같은지 찾는 문제)
+  * 배열 내 중복 원소 제거 (정렬된 배열에서 중복된 원소를 제거하여 새로운 배열을 만드는 문제)
+  * 최소, 최대 문제 (배열의 최소값과 최대값을 찾거나, 특정 구간 내에서 최대 또는 최소값을 찾는 문제)
+
+```c
+#include <stdio.h>
+
+// 투 포인터를 이용하여 배열에서 두 수의 합이 주어진 값을 만족하는 쌍을 찾는 예제
+int main() {
+  int arr[] = {1, 2, 3, 4, 6, 8, 9}; // 정렬된 배열
+  int target = 10; // 목표 합
+  int left = 0; // 왼쪽 포인터
+  int right = sizeof(arr) / sizeof(arr[0]) - 1; // 오른쪽 포인터
+
+  while (left < right) {
+    int sum = arr[left] + arr[right];
+
+    if (sum == target) {
+      printf("Two numbers found: %d, %d\n", arr[left], arr[right]);
+      break; // 두 수를 찾으면 종료
+    } else if (sum < target) {
+      left++; // 합이 목표값보다 작으면 왼쪽 포인터를 증가시킴
+    } else {
+      right--; // 합이 목표값보다 크면 오른쪽 포인터를 감소시킴
+    }
+  }
+
+  if (left >= right) {
+    printf("No two numbers found with the target sum.\n");
+  }
+
+  return 0;
+}
+```
+
+```c
+#include <stdio.h>
+
+int main() {
+  int N = 10, S = 15;  // N: 배열 크기, S: 목표 부분합
+  int arr[] = {5, 1, 3, 5, 10, 7, 4, 9, 2, 8};  // 예시 배열
+  
+  int left = 0, right = 0;
+  int sum = 0, min_length = N + 1;  // 부분합과 최소 길이 초기화
+
+  // 투 포인터를 이용하여 연속된 부분합 탐색
+  while (right < N) {
+    sum += arr[right];  // right 포인터가 가리키는 값을 부분합에 추가
+    right++;
+
+    // 부분합이 S 이상이 되면, left 포인터를 이동시켜 최소 길이를 찾음
+    while (sum >= S) {
+      if (right - left < min_length) {
+        min_length = right - left;  // 최소 길이 갱신
+      }
+      sum -= arr[left];  // left 포인터를 이동시키며 부분합에서 빼줌
+      left++;
+    }
+  }
+
+  // 만약 최소 길이가 갱신되지 않았다면, 불가능하므로 0 출력
+  if (min_length == N + 1) {
+    printf("0\n");
+  } else {
+    printf("%d\n", min_length);
+  }
+
+  return 0;
+}
+```
